software/k8s/insurance-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: insurance-processor-service
  name: insurance-processor-service
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance-processor-service
  template:
    metadata:
      labels:
        app: insurance-processor-service
    spec:
      containers:
        - image: ${AWS_ECR_REGISTRY}/managed-care-plan-registry:insurance-processor-1.2
          name: insurance-processor-service
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false
