software/k8s/care-plan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: care-plan-service
  name: care-plan-service
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: care-plan-service
  template:
    metadata:
      labels:
        app: care-plan-service
    spec:
      containers:
        - image: ${AWS_ECR_REGISTRY}/managed-care-plan-registry:care-plan-1.2
          name: care-plan-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: care-plan-service-svc
spec:
  selector:
    app: care-plan-service
  ports:
    - name: http
      port: 8080
